[gd_scene load_steps=27 format=3 uid="uid://d4icmcs1uvts0"]

[ext_resource type="Script" uid="uid://dipcroknp8nkm" path="res://Depot.gd" id="1_7io3k"]
[ext_resource type="Texture2D" uid="uid://dwu7uf236nv45" path="res://smoke_particle3.png" id="2_8rw7m"]
[ext_resource type="Texture2D" uid="uid://b4r0h7cpex53o" path="res://smoke_particle.png" id="2_86gfb"]
[ext_resource type="Texture2D" uid="uid://i4ucl1w23eax" path="res://smoke_particle2.png" id="4_k8c5g"]
[ext_resource type="AudioStream" uid="uid://dfxvoco8wceuj" path="res://bass_impact.mp3" id="5_bmtvt"]
[ext_resource type="AudioStream" uid="uid://creyi5n685akw" path="res://thruster_sfx.mp3" id="5_wb1mn"]
[ext_resource type="AudioStream" uid="uid://tyen1vglfww2" path="res://dirt_impact.mp3" id="6_wb1mn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jl861"]
size = Vector3(3, 3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_jl861"]
size = Vector3(3, 4, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_7io3k"]
size = Vector3(2.8, 1.3750976, 3)

[sub_resource type="SphereShape3D" id="SphereShape3D_7io3k"]
radius = 38.854122

[sub_resource type="Gradient" id="Gradient_k8c5g"]
colors = PackedColorArray(0.62967473, 0.62967473, 0.6296747, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_acdtx"]
gradient = SubResource("Gradient_k8c5g")

[sub_resource type="Gradient" id="Gradient_bmtvt"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wb1mn"]
gradient = SubResource("Gradient_bmtvt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7io3k"]
lifetime_randomness = 0.1
particle_flag_rotate_y = true
emission_shape = 3
emission_box_extents = Vector3(1.5, 0.135, 1.5)
angle_min = -285.9
angle_max = 279.2
direction = Vector3(0, 0, 0)
spread = 180.0
flatness = 0.982
initial_velocity_min = 12.0
initial_velocity_max = 14.0
gravity = Vector3(0, -0.5, 0)
damping_min = 8.0
damping_max = 14.000001
scale_min = 0.7
scale_max = 1.3
color_ramp = SubResource("GradientTexture1D_wb1mn")
color_initial_ramp = SubResource("GradientTexture1D_acdtx")
turbulence_noise_strength = 9.72
turbulence_influence_min = 0.0
turbulence_influence_max = 0.063
turbulence_initial_displacement_min = -0.9999985
turbulence_initial_displacement_max = 1.0000015

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k8c5g"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_8rw7m")
disable_receive_shadows = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
proximity_fade_distance = 0.01
distance_fade_min_distance = 566.11
distance_fade_max_distance = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_acdtx"]
material = SubResource("StandardMaterial3D_k8c5g")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_86gfb"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_86gfb")
disable_receive_shadows = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
proximity_fade_distance = 0.01
distance_fade_min_distance = 566.11
distance_fade_max_distance = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_8rw7m"]
material = SubResource("StandardMaterial3D_86gfb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_acdtx"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_k8c5g")
disable_receive_shadows = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
proximity_fade_distance = 0.01
distance_fade_min_distance = 566.11
distance_fade_max_distance = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_bmtvt"]
material = SubResource("StandardMaterial3D_acdtx")

[sub_resource type="Animation" id="Animation_86gfb"]
resource_name = "Impact"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ImpactParticles1:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ImpactParticles2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ImpactParticles3:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ImpactBassSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FallingSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.03333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ImpactSound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/6/type = "scale_3d"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MeshInstance3D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_8rw7m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ImpactParticles1:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ImpactParticles2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ImpactParticles3:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ImpactBassSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FallingSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ImpactSound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MeshInstance3D:mesh")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("BoxMesh_jl861")]
}
tracks/7/type = "scale_3d"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MeshInstance3D")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_k8c5g"]
resource_name = "Falling"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FallingSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 3, 1, 1, 1, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8c5g"]
_data = {
&"Falling": SubResource("Animation_k8c5g"),
&"Impact": SubResource("Animation_86gfb"),
&"RESET": SubResource("Animation_8rw7m")
}

[node name="Depot" type="CharacterBody3D"]
script = ExtResource("1_7io3k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_jl861")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9917164, 0)
mesh = SubResource("BoxMesh_jl861")

[node name="SmashArea" type="Area3D" parent="."]
collision_mask = 50

[node name="CollisionShape3D" type="CollisionShape3D" parent="SmashArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.21634972, 0)
shape = SubResource("BoxShape3D_7io3k")

[node name="ShakeArea" type="Area3D" parent="."]
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShakeArea"]
shape = SubResource("SphereShape3D_7io3k")

[node name="ImpactParticles1" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65203035, 0)
emitting = false
amount = 120
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.25
use_fixed_seed = true
seed = 550673134
process_material = SubResource("ParticleProcessMaterial_7io3k")
draw_pass_1 = SubResource("QuadMesh_acdtx")

[node name="ImpactParticles2" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65203035, 0)
emitting = false
amount = 120
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.25
use_fixed_seed = true
seed = 3859008214
process_material = SubResource("ParticleProcessMaterial_7io3k")
draw_pass_1 = SubResource("QuadMesh_8rw7m")

[node name="ImpactParticles3" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65203035, 0)
emitting = false
amount = 120
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.25
use_fixed_seed = true
seed = 200234698
process_material = SubResource("ParticleProcessMaterial_7io3k")
draw_pass_1 = SubResource("QuadMesh_bmtvt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k8c5g")
}

[node name="FallingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_wb1mn")
unit_size = 20.0
max_distance = 1000.0

[node name="ImpactBassSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_bmtvt")
volume_db = 14.804

[node name="ImpactSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_wb1mn")
volume_db = 10.0

[connection signal="body_entered" from="SmashArea" to="." method="_on_smash_area_body_entered"]
[connection signal="body_entered" from="ShakeArea" to="." method="_on_shake_area_body_entered"]
[connection signal="body_exited" from="ShakeArea" to="." method="_on_shake_area_body_exited"]
